--- a/AppGestionCegep/AppGestionCegep/AppGestionCegep.csproj
+++ b/AppGestionCegep/AppGestionCegep/AppGestionCegep.csproj
@@ -68,6 +68,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Programme.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
